Revision history for String-Substitute

{{ $NEXT }}

0.004     2017-03-23 11:21:38+00:00 Europe/London
    Declared dependency on Regexp::Genex

0.003     2017-03-22 14:02:50+00:00 Europe/London
    Removed use of namespace::autoclean from early in development.

0.002     2017-03-22 13:59:11+00:00 Europe/London
    Made some POD improvements.

0.001     2017-03-22 13:11:09+00:00 Europe/London
    First version.
